--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mi nuevo vicio</title>
+    <title>Mi Nuevo Vicio - Proyecto Educativo de Ecommerce</title>
+    <meta name="description" content="Proyecto educativo de ecommerce desarrollado con React. Muestra juegos gratuitos de la API FreeToGame para fines de aprendizaje." />
   </head>
   <body>
     <div id="root"></div>
