--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' data: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://www.freetogame.com https://api.allorigins.win https://corsproxy.io https://api.codetabs.com https://cors-anywhere.herokuapp.com https://cors.bridged.cc https://proxy.cors.sh https://thingproxy.freeboard.io https://images.weserv.nl;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' data: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://www.freetogame.com https://api.allorigins.win https://corsproxy.io https://api.codetabs.com https://cors-anywhere.herokuapp.com https://cors.bridged.cc https://proxy.cors.sh https://thingproxy.freeboard.io https://images.weserv.nl https://cors.io;">
     <title>Mi Nuevo Vicio - Proyecto Educativo de Ecommerce</title>
     <meta name="description" content="Proyecto educativo de ecommerce desarrollado con React. Muestra juegos gratuitos de la API FreeToGame para fines de aprendizaje." />
     
@@ -25,6 +25,7 @@
     <link rel="dns-prefetch" href="https://cors.bridged.cc" />
     <link rel="dns-prefetch" href="https://proxy.cors.sh" />
     <link rel="dns-prefetch" href="https://thingproxy.freeboard.io" />
+    <link rel="dns-prefetch" href="https://cors.io" />
     <link rel="dns-prefetch" href="https://images.weserv.nl" />
     
     <!-- Preconectar a dominios externos críticos -->
