agregué página de not found

--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' data: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://www.freetogame.com https://images.weserv.nl;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' data: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://www.freetogame.com https://images.weserv.nl https://6865687b5b5d8d0339810fd1.mockapi.io;">
     <title>Mi Nuevo Vicio - Proyecto Educativo de Ecommerce</title>
     <meta name="description" content="Proyecto educativo de ecommerce desarrollado con React. Muestra juegos gratuitos de la API FreeToGame para fines de aprendizaje." />
-    
-    <!-- Preconectar a dominios externos -->
     
     <!-- Preconectar a dominios externos -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
